28 August 2012: Wouter
	- TXT records with components longer than 255 fail to parse,
	  but without segfault, it continues processing with non NULL value.

27 August 2012: Wouter
	- libevent in server_child.

21 August 2012: Matthijs
	- Fix bug#464: Conditionally define MAXHOSTNAMELEN

20 August 2012: Wouter
	- Fix hang on exit in xfrd.
	- optimized socket counts for zone transfer speed.

13 August 2012: Wouter
	- Fix xfrd libevent events.

10 August 2012: Wouter
	- libevent in xfrd.

26 July 2012: Yuri
	- Prioritize notify sender for requesting XFR.
	  (thanks Ilya Bakulin)

19 July 2012: Willem
	- Fix for VU#624931 CVE-2012-2978: NSD denial of service 
	  vulnerability from non-standard DNS packet from any host
	  on the internet.
	  http://www.nlnetlabs.nl/downloads/CVE-2012-2978.txt

18 July 2012: Wouter
	- Fix bug#460: man page correction - identity.

9 July 2012: Wouter
	- delete temporary transfer files on exit of xfrd and reload.
	- when tasks are applied, reload checks if it must exit between
	  tasks, so that it can quickly exit when NSD is told to quit.
	- fix bug in apply_xfr that must use an udb_ptr because it shifts
	  when new allocations are made.

6 July 2012: Wouter
	- add xfrdir: "/tmp" option and configure --with-xfrdir="/tmp".
	  The nsd.task files and a subdirectory for zone transfers are
	  created there.

2 July 2012: Wouter
	- fix checkconf unit test and add test for backwards compatibility
	  for difffile: "x" statement.

29 June 2012: Wouter
	- Implemented /tmp/nsd.xfr.xxx/ to replace ixfr.db.  So that nsdc
	  patch is no longer needed.

8 June 2012: Wouter
	- Fix tpkg test cutest_qroot and rr-test for prinout of algorithms
	  as numbers, and copy of DO flag to the answer.
	- pick up fd fix from 3_2 branch: Some more fd >= 0 to fd != -1 fixes

31 May 2012: Matthijs
	- Sync with 3.2 branch

24 February 2012: Wouter
	- Fix for qtype ANY for a wildcard domain in NSEC signed zone.

9 February 2012: Wouter